--- a/cotengra/kahypar_profiles/km1_kKaHyPar_sea20.ini
+++ b/cotengra/kahypar_profiles/km1_kKaHyPar_sea20.ini
@@ -51,18 +51,15 @@ i-r-runs=-1
 i-r-fm-stop=simple
 i-r-fm-stop-i=50
 # main -> local search
-r-type=kway_fm_flow_km1
+r-type=kway_fm_hyperflow_cutter_km1
 r-runs=-1
 r-fm-stop=adaptive_opt
 r-fm-stop-alpha=1
 r-fm-stop-i=350
-# local_search -> flow
-r-flow-algorithm=ibfs
-r-flow-alpha=16
-r-flow-beta=128
-r-flow-network=hybrid
+# local_search -> flow scheduling and heuristics
 r-flow-execution-policy=exponential
-r-flow-use-most-balanced-minimum-cut=true
-r-flow-use-adaptive-alpha-stopping-rule=true
-r-flow-ignore-small-hyperedge-cut=true
-r-flow-use-improvement-history=true
+# local_search -> hyperflowcutter configuration
+r-hfc-size-constraint=mf-style
+r-hfc-scaling=16
+r-hfc-distance-based-piercing=true
+r-hfc-mbc=true
