--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,6 @@ testpaths = tests
 addopts = --cov=cotengra --cov-report term-missing --verbose --durations=10
 filterwarnings =
     once
+
+[pylama]
+ignore = C901
