fix for kahypar 1.1.7+

--- a/cotengra/kahypar_profiles/old/cut_rKaHyPar_sea20.ini
+++ b/cotengra/kahypar_profiles/old/cut_rKaHyPar_sea20.ini
@@ -1,8 +1,8 @@
 # general
-mode=direct
+mode=recursive
 objective=cut
 seed=-1
-cmaxnet=1000
+cmaxnet=-1
 vcycles=0
 # main -> preprocessing -> min hash sparsifier
 p-use-sparsifier=true
@@ -14,49 +14,34 @@ p-sparsifier-num-hash-func=5
 p-sparsifier-combined-num-hash-func=100
 # main -> preprocessing -> community detection
 p-detect-communities=true
-p-detect-communities-in-ip=true
+p-detect-communities-in-ip=false
 p-reuse-communities=false
 p-max-louvain-pass-iterations=100
 p-min-eps-improvement=0.0001
 p-louvain-edge-weight=hybrid
 # main -> coarsening
-c-type=ml_style
-c-s=1
+c-type=heavy_lazy
+c-s=3.25
 c-t=160
 # main -> coarsening -> rating
 c-rating-score=heavy_edge 
 c-rating-use-communities=true
-c-rating-heavy_node_penalty=no_penalty
-c-rating-acceptance-criterion=best_prefer_unmatched
-c-fixed-vertex-acceptance-criterion=fixed_vertex_allowed
+c-rating-heavy_node_penalty=multiplicative
+c-rating-acceptance-criterion=best
+c-fixed-vertex-acceptance-criterion=free_vertex_only
 # main -> initial partitioning
-i-mode=recursive
-i-technique=multi
-# initial partitioning -> coarsening
-i-c-type=ml_style
-i-c-s=1
-i-c-t=150
-# initial partitioning -> coarsening -> rating
-i-c-rating-score=heavy_edge 
-i-c-rating-use-communities=true
-i-c-rating-heavy_node_penalty=no_penalty
-i-c-rating-acceptance-criterion=best_prefer_unmatched
-i-c-fixed-vertex-acceptance-criterion=fixed_vertex_allowed
+i-mode=direct
+i-technique=flat
 # initial partitioning -> initial partitioning
 i-algo=pool
 i-runs=20
-# initial partitioning -> bin packing
-i-bp-algorithm=worst_fit
-i-bp-heuristic-prepacking=false
-i-bp-early-restart=true
-i-bp-late-restart=true
-# initial partitioning -> local search
+# initial partitioning -> local search 
 i-r-type=twoway_fm
 i-r-runs=-1
 i-r-fm-stop=simple
 i-r-fm-stop-i=50
 # main -> local search
-r-type=kway_fm_hyperflow_cutter
+r-type=twoway_fm_hyperflow_cutter
 r-runs=-1
 r-fm-stop=adaptive_opt
 r-fm-stop-alpha=1
