--- a/cotengra/kahypar_profiles/old/km1_kKaHyPar_sea20.ini
+++ b/cotengra/kahypar_profiles/old/km1_kKaHyPar_sea20.ini
@@ -1,6 +1,6 @@
 # general
 mode=direct
-objective=cut
+objective=km1
 seed=-1
 cmaxnet=1000
 vcycles=0
@@ -45,18 +45,13 @@ i-c-fixed-vertex-acceptance-criterion=fixed_vertex_allowed
 # initial partitioning -> initial partitioning
 i-algo=pool
 i-runs=20
-# initial partitioning -> bin packing
-i-bp-algorithm=worst_fit
-i-bp-heuristic-prepacking=false
-i-bp-early-restart=true
-i-bp-late-restart=true
 # initial partitioning -> local search
 i-r-type=twoway_fm
 i-r-runs=-1
 i-r-fm-stop=simple
 i-r-fm-stop-i=50
 # main -> local search
-r-type=kway_fm_hyperflow_cutter
+r-type=kway_fm_hyperflow_cutter_km1
 r-runs=-1
 r-fm-stop=adaptive_opt
 r-fm-stop-alpha=1
