--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include cotengra/kahypar_profiles/*.ini
+include cotengra/kahypar_profiles/old/*.ini
 include LICENSE.md
 include README.md
 graft tests
