--- a/cotengra/kahypar_profiles/cut_rKaHyPar_sea20.ini
+++ b/cotengra/kahypar_profiles/cut_rKaHyPar_sea20.ini
@@ -35,6 +35,11 @@ i-technique=flat
 # initial partitioning -> initial partitioning
 i-algo=pool
 i-runs=20
+# initial partitioning -> bin packing
+i-bp-algorithm=worst_fit
+i-bp-heuristic-prepacking=false
+i-bp-early-restart=true
+i-bp-late-restart=true
 # initial partitioning -> local search 
 i-r-type=twoway_fm
 i-r-runs=-1
