--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         include:
         - os: macos-latest
           python-version: '3.10'
-          env: base
+          env: mac
         - os: windows-latest
           python-version: '3.10'
           env: win
