--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,13 +32,17 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install micromamba
-      uses: mamba-org/setup-micromamba@v1
+      uses: mamba-org/setup-micromamba@v2
       with:
         environment-file: ci/requirements/py-${{ matrix.env }}.yml
         environment-name: test-env
         create-args: >-
           python=${{ matrix.python-version }}
         cache-environment: true
+        post-cleanup: 'all'
+        init-shell: >-
+          bash
+          powershell
 
     - name: Test with pytest
       run: pytest --cov=cotengra tests/ --cov-report=xml tests
