--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.12']
         env: [base]
         include:
         - os: macos-latest
@@ -26,23 +26,28 @@ jobs:
           env: win
         - os: ubuntu-latest
           python-version: '3.11'
-          env: no-oe
+          env: minimal
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install micromamba
-      uses: mamba-org/setup-micromamba@v2
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
       with:
-        environment-file: ci/requirements/py-${{ matrix.env }}.yml
-        environment-name: test-env
-        cache-environment: true
-        create-args: >-
-          python=${{ matrix.python-version }}
-          conda
+        version: "latest"
+        enable-cache: true
+
+    - name: Install python
+      run: uv python install ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: uv pip install -r ci/requirements/${{ matrix.env }}.txt
+
+    - name: Install cotengra
+      run: uv pip install -e .
 
     - name: Test with pytest
-      run: pytest --cov=cotengra tests/ --cov-report=xml tests
+      run: uv run pytest --cov=cotengra tests/ --cov-report=xml tests
 
     - name: Report to codecov
       uses: codecov/codecov-action@v4
