--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,14 +34,14 @@ jobs:
     - name: Install uv
       uses: astral-sh/setup-uv@v3
       with:
-        version: "latest"
+        version: "0.4.20"
         enable-cache: true
 
     - name: Install python
       run: uv python install ${{ matrix.python-version }}
 
     - name: Install dependencies
-      run: uv pip install -r ci/requirements/${{ matrix.env }}.txt
+      run: uv pip sync ci/requirements/${{ matrix.env }}.txt
 
     - name: Install cotengra
       run: uv pip install -e .
