uv action: tweak sync

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,11 +39,11 @@ jobs:
     - name: Install python
       run: uv python install ${{ matrix.python-version }}
 
+    - name: Setup uv project
+      run: uv sync
+
     - name: Install dependencies
       run: uv pip sync ci/requirements/${{ matrix.env }}.txt
-
-    - name: Install cotengra
-      run: uv pip install -e .
 
     - name: Test with pytest
       run: uv run pytest --cov=cotengra tests/ --cov-report=xml tests
