--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,88 @@ requires = [
     "setuptools_scm[toml]>=6.2"
 ]
 
+[project]
+name = "cotengra"
+description = "Hyper optimized contraction trees for large tensor networks and einsums."
+readme = { file = "README.md", content-type = "text/markdown" }
+dynamic = ["version"]
+authors = [
+    { name = "Johnnie Gray", email = "johnniemcgray@gmail.com" }
+]
+license = { file = "LICENSE.md" }
+requires-python = ">=3.8"
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12"
+]
+keywords = ["tensor", "network", "contraction", "graph", "hypergraph", "partition", "einsum"]
+dependencies = [
+    "autoray"
+]
+
+[project.urls]
+"Documentation" = "https://cotengra.readthedocs.io/"
+"Repository" = "https://github.com/jcmgray/cotengra/"
+"Issues" = "https://github.com/jcmgray/cotengra/issues"
+"Changelog" = "https://cotengra.readthedocs.io/en/latest/changelog.html"
+
+[project.optional-dependencies]
+recommended = [
+    "cmaes",
+    "cotengrust >= 0.1.3",
+    "cytoolz",
+    "kahypar",
+    "networkx",
+    "numpy",
+    "opt_einsum",
+    "optuna",
+    "ray",
+    "tqdm"
+]
+docs = [
+    "furo",
+    "ipython != 8.7.0",
+    "myst-nb",
+    "setuptools_scm",
+    "sphinx-autoapi",
+    "astroid < 3.0.0",
+    "sphinx-copybutton",
+    "sphinx-design",
+    "sphinx >= 2.0"
+]
+test = [
+    "altair",
+    "baytune",
+    "chocolate",
+    "cmaes",
+    "dask",
+    "distributed",
+    "kahypar",
+    "matplotlib",
+    "networkx",
+    "nevergrad",
+    "numpy",
+    "opt_einsum",
+    "pytest",
+    "seaborn",
+    "skopt"
+]
+
+[tool.setuptools.packages.find]
+exclude = ["docs", "tests"]
+
 [tool.setuptools_scm]
 write_to = "cotengra/_version.py"
 
 [tool.pytest.ini_options]
 testpaths = "tests"
-addopts = "--cov=cotengra --cov-report term-missing --cov-report xml:coverage.xml --verbose --durations=10"
-filterwarnings = "once"
+# addopts = "--cov=cotengra --cov-report term-missing --cov-report xml:coverage.xml --verbose --durations=10"
+# filterwarnings = "once"
 
 [tool.coverage.run]
 omit = ["*/cotengra/experimental/*"]
