--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
       run: uv sync
 
     - name: Install dependencies
-      run: uv pip sync ci/requirements/${{ matrix.env }}.txt
+      run: uv pip install -r ci/requirements/${{ matrix.env }}.txt
 
     - name: Test with pytest
       run: uv run pytest --cov=cotengra tests/ --cov-report=xml tests
