--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.9', '3.12']
+        # kahypar doesn't have a 3.12 build yet
+        python-version: ['3.9', '3.11']
         env: [base]
         include:
         - os: macos-latest
