--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,15 @@ requires-python = ">=3.8"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "License :: OSI Approved :: Apache Software License",
+    "Operating System :: OS Independent",
+    "Intended Audience :: Science/Research",
+    "Programming Language :: Python",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12"
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Scientific/Engineering",
 ]
 keywords = ["tensor", "network", "contraction", "graph", "hypergraph", "partition", "einsum"]
 dependencies = [
@@ -99,7 +103,7 @@ max_line_length = 79
 [tool.ruff]
 line-length = 79
 target-version = "py38"
-ignore = ["E741"]
+lint.ignore = ["E741"]
 
 [tool.black]
 line-length = 79
