--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         # kahypar doesn't have a 3.12 build yet
-        python-version: ['3.9', '3.11']
+        python-version: ['3.9', '3.12']
         env: [base]
         include:
         - os: macos-latest
@@ -35,16 +35,18 @@ jobs:
     - name: Install uv
       uses: astral-sh/setup-uv@v5
       with:
-        version: "0.4.20"
+        version: "latest"
 
     - name: Install python
-      run: uv python install ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
 
     - name: Setup uv project
       run: uv sync
 
     - name: Install dependencies
-      run: uv pip install -r ci/requirements/${{ matrix.env }}.txt
+      run: uv pip install -r ci/deps/requirements-${{ matrix.env }}.txt
 
     - name: Test with pytest
       run: uv run pytest --cov=cotengra tests/ --cov-report=xml tests
