CI: revert to installing python with uv

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,9 +38,7 @@ jobs:
         version: "latest"
 
     - name: Install python
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
+      run: uv python install ${{ matrix.python-version }}
 
     - name: Setup uv project
       run: uv sync
