--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
 
         - os: macos-latest
           env: test-mac
-          
+
         - os: windows-latest
           env: test-windows
 
@@ -34,10 +34,13 @@ jobs:
     - uses: actions/checkout@v5
 
     - uses: prefix-dev/setup-pixi@v0.9.0
+      with:
+        environments: ${{ matrix.env }}
+        activate-environment: true
 
     - name: Test with pytest
       run: |
-        pixi run -e ${{ matrix.env }} pytest \
+        pytest \
         tests/ \
         --cov=cotengra \
         --cov-report=xml \
