--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,37 +16,29 @@ jobs:
       matrix:
         include:
         - os: ubuntu-latest
-          env: test-linux-minimal
+          pixi_environment: testminimal
 
         - os: ubuntu-latest
-          env: test-linux-pyold
+          pixi_environment: testpyold
 
         - os: ubuntu-latest
-          env: test-linux-pynew
+          pixi_environment: testpynew
 
         - os: macos-latest
-          env: test-mac
+          pixi_environment: testpymid
 
         - os: windows-latest
-          env: test-windows
+          pixi_environment: testpymid
 
     steps:
     - uses: actions/checkout@v6
 
     - uses: prefix-dev/setup-pixi@v0.9.3
       with:
-        environments: ${{ matrix.env }}
-        activate-environment: true
+        environments: ${{ matrix.pixi_environment }}
 
     - name: Test with pytest
-      run: |
-        pytest \
-        tests/ \
-        --cov=cotengra \
-        --cov-report=xml \
-        --verbose \
-        --durations=10 \
-        -m "not localonly"
+      run: pixi run -e ${{ matrix.pixi_environment }} test
 
     - name: Report to codecov
       uses: codecov/codecov-action@v5
