--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,7 +100,7 @@ target-version = ['py310']
 
 [tool.pixi.workspace]
 channels = ["conda-forge"]
-platforms = ["linux-64", "osx-arm64", "win-64"]
+platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]
 
 [tool.pixi.dependencies]
 autoray = ">=0.8.0,<0.9"
@@ -108,32 +108,29 @@ autoray = ">=0.8.0,<0.9"
 [tool.pixi.pypi-dependencies]
 cotengra = { path = ".", editable = true }
 
-[tool.pixi.feature.testminimal]
-platforms = [ "linux-64" ]
-[tool.pixi.feature.testminimal.dependencies]
+[tool.pixi.feature.basic.dependencies]
 cmaes = "*"
-coverage = "*"
 matplotlib = "*"
 networkx = "*"
 optuna = "*"
-pytest = "*"
-pytest-cov = "*"
 seaborn = "*"
 tqdm = "*"
 
-[tool.pixi.feature.test.dependencies]
-cmaes = "*"
-coverage = "*"
-matplotlib = "*"
-networkx = "*"
+[tool.pixi.feature.full.dependencies]
 opt_einsum = "*"
-optuna = "*"
+[tool.pixi.feature.full.pypi-dependencies]
+cotengrust = ">=0.2.0"
+[tool.pixi.feature.full.target.linux-64.pypi-dependencies]
+kahypar = "*"
+ray = "*"
+[tool.pixi.feature.full.target.osx-arm64.pypi-dependencies]
+kahypar = "*"
+ray = "*"
+
+[tool.pixi.feature.tests.dependencies]
+coverage = "*"
 pytest = "*"
 pytest-cov = "*"
-seaborn = "*"
-tqdm = "*"
-[tool.pixi.feature.test.pypi-dependencies]
-cotengrust = ">=0.2.0"
 
 [tool.pixi.feature.pyold.dependencies]
 python = "3.10.*"
@@ -141,15 +138,6 @@ python = "3.10.*"
 python = "3.12.*"
 [tool.pixi.feature.pynew.dependencies]
 python = "3.13.*"
-
-[tool.pixi.feature.linux]
-platforms = ["linux-64"]
-pypi-dependencies = { kahypar = "*", ray = "*" }
-[tool.pixi.feature.mac]
-platforms = ["osx-arm64"]
-pypi-dependencies = { kahypar = "*", ray = "*" }
-[tool.pixi.feature.windows]
-platforms = ["win-64"]
 
 [tool.pixi.feature.docs.dependencies]
 astroid = "*"
@@ -163,9 +151,25 @@ sphinx-copybutton = "*"
 sphinx-design = "*"
 
 [tool.pixi.environments]
-test-linux-minimal = { features = ["testminimal"] }
-test-linux-pyold = { features = ["pyold", "test", "linux"] }
-test-linux-pynew = { features = ["pynew", "test", "linux"] }
-test-mac = { features = ["pymid", "test", "mac"] }
-test-windows = { features = ["pymid", "test", "windows"] }
-readthedocs = { features = ["docs"] }
+testminimal = { features = ["pymid", "basic", "tests"] }
+testpynew = { features = ["pynew", "basic", "full", "tests"] }
+testpymid = { features = ["pymid", "basic", "full", "tests"] }
+testpyold = { features = ["pyold", "basic", "full", "tests"] }
+docs = { features = ["pynew", "docs"] }
+
+[tool.pixi.tasks.test]
+cmd = """
+pytest \
+    tests/ \
+    --cov=cotengra \
+    --cov-report=xml \
+    --verbose \
+    --durations=10 \
+    -m "not localonly"
+"""
+cwd = "."
+
+[tool.pixi.feature.docs.tasks]
+docs = { cmd = "sphinx-build -b html docs docs/_build/html", cwd = "." }
+docs-clean = { cmd = "rm -rf docs/_build", cwd = "." }
+docs-serve = { cmd = "python -m http.server -d docs/_build/html 8000", cwd = "." }
